fix: ajustando a geração JWT no momento de registrar dentro da aplicação

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/delivery
     username: root
-    password: Bont
+    password:
   jpa:
     hibernate:
       ddl-auto: update
