fix:tentando corrigir o bug de autenticação no login

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/delivery
+    url: jdbc:mariadb://localhost:3306/novaEcommerce
     username: root
     password:
   jpa:
