feature:atualização no metodo de adicionar produto

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 # Configurações específicas para o ambiente de desenvolvimento
 spring.datasource.url=jdbc:mariadb://localhost:3306/novaEcommerce
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Bont
 
 # Configuração do Redis
 cache.type=redis
