feature: refatoração de codigo e adicionando nova tabela de preço

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 # Configurações específicas para o ambiente de desenvolvimento
 spring.datasource.url=jdbc:mariadb://localhost:3306/novaEcommerce
 spring.datasource.username=root
-spring.datasource.password=Bont
+spring.datasource.password=
 
 # Configuração do Redis
 cache.type=redis
@@ -62,3 +62,7 @@ logging.log4j2.appender.jdbc.columnConfigs.column5.type=VARCHAR
 logging.log4j2.appender.jdbc.columnConfigs.column5.name=exception
 logging.log4j2.rootLogger.level=INFO
 logging.log4j2.rootLogger.appenderRef.jdbc.ref=databaseAppender
+
+# Configuração do log para salvamento em um arquivo
+logging.file.path="../java/com/api/apibackend/Log/infra/file"
+logging.file.name="file-log"
