--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -63,6 +63,9 @@ logging.log4j2.appender.jdbc.columnConfigs.column5.name=exception
 logging.log4j2.rootLogger.level=INFO
 logging.log4j2.rootLogger.appenderRef.jdbc.ref=databaseAppender
 
+logging.file.path="../java/com/api/apibackend/Log/infra/file"
+logging.file.name="file-log"
+
 # Outras configurações (comentadas)
 # server.error.include-exception=true
 # server.error.include-stacktrace=ALWAYS
