--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,7 @@ spring.thymeleaf.corsConfig=http://localhost:3000
 api.security.token.secret=12345678
 server.error.include-exception=true
 spring.main.allow-circular-references=true
+spring.main.allow-bean-definition-overriding=true
 
 # Configurações do JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -66,3 +67,6 @@ logging.log4j2.rootLogger.appenderRef.jdbc.ref=databaseAppender
 # Configuração do log para salvamento em um arquivo
 logging.file.path="../java/com/api/apibackend/Log/infra/file"
 logging.file.name="file-log"
+
+# alterando a url da documentação da api
+springdoc.swagger-ui.path=/api/swagger-ui.html
