feature:adicionando configuração do redis e aumentando a complexidade da adição de um produto

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,12 @@
 # Configurações específicas para o ambiente de desenvolvimento (perfil: dev)
 
-# Configurações específicas para o ambiente de desenvolvimento
-spring.datasource.url=jdbc:mariadb://localhost:3306/novaEcommerce
+# Configurações do banco de dados MariaDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/novaecommerce
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Bont
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-# Configuração do Redis
+# Configuração do Redis para cache
 cache.type=redis
 cache.redis.host=127.0.0.1
 cache.redis.port=6379
@@ -18,7 +19,7 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.main.allow-bean-definition-overriding=true
 spring.thymeleaf.corsConfig=http://localhost:3000
 
-#Configurações gerais
+# Configurações gerais
 api.security.token.secret=12345678
 server.error.include-exception=true
 spring.main.allow-circular-references=true
@@ -66,7 +67,8 @@ logging.log4j2.rootLogger.appenderRef.jdbc.ref=databaseAppender
 
 # Configuração do log para salvamento em um arquivo
 logging.file.path="../java/com/api/apibackend/Log/infra/file"
+logging.level.root=ERROR
 logging.file.name="file-log"
 
-# alterando a url da documentação da api
+# Alterando a URL da documentação da API
 springdoc.swagger-ui.path=/api/swagger-ui.html
