--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,10 @@
 #Configuração do ambiente de produção
 
 # Configurações do DataSource
-spring.datasource.url=jdbc:mariadb://
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.host=${DATABASE_HOST}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Configurações do JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -23,7 +24,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.main.allow-bean-definition-overriding=true
-spring.thymeleaf.corsConfig=http://localhost:3000
+spring.thymeleaf.corsConfig=${CORS_CONFIG}
 
 # Configurações do Jackson para lidar com objetos Hibernate
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
@@ -72,15 +73,3 @@ logging.file.name="file-log"
 # logging.level.root=DEBUG
 # spring.devtools.add-properties=false
 # spring.thymeleaf.cache=false
-
-# Configurações de deploy para diferentes ambientes (comentadas)
-# spring.datasource.url=${DATABASE_URL}
-# spring.datasource.username=${DATABASE_USERNAME}
-# spring.datasource.password=${DATABASE_PASSWORD}
-# spring.datasource.url=jdbc:mysql:pscale_pw_8glndG5Snw16f7FI4PEGMKMBDKHdCulWaBlcPzHJlMq/database
-# spring.datasource.host=aws.connect.psdb.cloud
-# spring.datasource.username=op56ui4jacljb3zwkjnp
-# spring.datasource.password=pscale_pw_8glndG5Snw16f7FI4PEGMKMBDKHdCulWaBlcPzHJlMq
-# spring.datasource.url=jdbc:mysql://root:oEDkWxWm4d6E6hIOuBrb@containers-us-west-199.railway.app:6850/railway
-# spring.datasource.username=root
-# spring.datasource.password=oEDkWxWm4d6E6hIOuBrb
