--- a/.github/workflows/deployment-prod.yaml
+++ b/.github/workflows/deployment-prod.yaml
@@ -19,10 +19,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java-version }}
-
+          distribution: 'temurin'
+          
       - name: Build project and run tests
         run: |
           mvn clean install -DskipTests
