--- a/.github/workflows/deployment-staging.yaml
+++ b/.github/workflows/deployment-staging.yaml
@@ -20,9 +20,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java-version }}
+          distribution: 'temurin'
 
       - name: Build project and run tests
         run: |
