fix:atualizações adicionando interfaces e começando a pensar em como implementar o cupom dentro do pedido

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -69,3 +69,11 @@ logging.log4j2.rootLogger.appenderRef.jdbc.ref=databaseAppender
 logging.file.path="../java/com/api/apibackend/Log/infra/file"
 logging.level.root=ERROR
 logging.file.name="file-log"
+
+# prometheus
+management.endpoints.enabled-by-default=false
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
