--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -73,3 +73,11 @@ logging.file.name="file-log"
 # logging.level.root=DEBUG
 # spring.devtools.add-properties=false
 # spring.thymeleaf.cache=false
+
+# prometheus
+management.endpoints.enabled-by-default=false
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
