--- a/dockerFile
+++ b/dockerFile
@@ -1,8 +1,8 @@
-FROM eclipse-temurin:17-jdk-alpine
-WORKDIR /app
-COPY target/apibackend-0.0.1-SNAPSHOT.jar apibackend-0.0.1-SNAPSHOT.jar
-EXPOSE 8080
-ENTRYPOINT [ "java", "-jar", "app.jar" ]
+# FROM eclipse-temurin:17-jdk-alpine
+# WORKDIR /app
+# COPY target/apibackend-0.0.1-SNAPSHOT.jar apibackend-0.0.1-SNAPSHOT.jar
+# EXPOSE 8080
+# ENTRYPOINT [ "java", "-jar", "app.jar" ]
 
 # FROM ubuntu:latest
 
