fix:adicionando dados do preço do produto

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 # Configurações do banco de dados MariaDB
 spring.datasource.url=jdbc:mariadb://localhost:3306/novaecommerce
 spring.datasource.username=root
-spring.datasource.password=Bont
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 # Configuração do Redis para cache
