feature: adicionando documentação nas entidades e padronizando retorna da api de produtos,forneceodor e autenticação

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,8 +3,9 @@
 # Configurações do banco de dados MariaDB
 spring.datasource.url=jdbc:mariadb://localhost:3306/novaecommerce
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Bont
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+jasypt.encryptor.password=12345
 
 # Configuração do Redis para cache
 cache.type=redis
@@ -27,6 +28,7 @@ spring.main.allow-bean-definition-overriding=true
 
 # Configurações do JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # Configurações do MVC
 spring.mvc.throw-exception-if-no-handler-found=true
