--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,12 @@
 # Configurações específicas para o ambiente de desenvolvimento (perfil: dev)
 
 # Configurações do banco de dados MariaDB
-spring.datasource.url=jdbc:mariadb://localhost:3306/novaecommerce
+spring.datasource.url=jdbc:mariadb://localhost:3306/novaEcommerce
 spring.datasource.username=root
-spring.datasource.password=Bont
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 jasypt.encryptor.password=12345
+spring.datasource.passwordCharacterEncoding=UTF-8
 
 # Configuração do Redis para cache
 cache.type=redis
