--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,11 @@
 # Configurações específicas para o ambiente de desenvolvimento (perfil: dev)
 
 # Configurações do banco de dados MariaDB
-spring.datasource.url=jdbc:mariadb://localhost:3306/novaEcommerce
+spring.datasource.url=jdbc:mariadb://localhost:3306/novaecommerce
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.datasource.password=Bont
 jasypt.encryptor.password=12345
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.datasource.passwordCharacterEncoding=UTF-8
 
 # Configuração do Redis para cache
@@ -80,3 +80,7 @@ management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
+
+# # Migration flyway
+# spring.flyway.enabled=false
+# spring.flyway.baseline-on-migrate=true
