feature:adicionando migrations

--- a/src/test/java/com/api/apibackend/resources/application-test.properties
+++ b/src/test/java/com/api/apibackend/resources/application-test.properties
@@ -1,10 +1,10 @@
-# Configurações do banco de dados H2 em memória
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# # Configurações do banco de dados H2 em memória
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Console do H2 (opcional, para acesso ao console web)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# # Console do H2 (opcional, para acesso ao console web)
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
