--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -81,6 +81,7 @@ management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 
-# # Migration flyway
+# Migration flyway
 # spring.flyway.enabled=false
-# spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-on-migrate=true
+# logging.level.org.flywaydb=DEBUG
