--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -82,6 +82,6 @@ management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 
 # Migration flyway
-# spring.flyway.enabled=false
-spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=false
+# spring.flyway.baseline-on-migrate=true
 # logging.level.org.flywaydb=DEBUG
