--- a/dockerFile
+++ b/dockerFile
@@ -18,4 +18,4 @@
 
 # EXPOSE 8080
 
-# COPY --from=build / target/nome do arquivo app.jar
+# COPY --from=build / target/apibackend-0.0.1-SNAPSHOT.jar
