--- a/dockerFile
+++ b/dockerFile
@@ -1,21 +1,21 @@
-# FROM eclipse-temurin:17-jdk-alpine
-# WORKDIR /app
-# COPY target/apibackend-0.0.1-SNAPSHOT.jar apibackend-0.0.1-SNAPSHOT.jar
-# EXPOSE 8080
-# ENTRYPOINT [ "java", "-jar", "app.jar" ]
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY target/apibackend-0.0.1-SNAPSHOT.jar apibackend-0.0.1-SNAPSHOT.jar
+EXPOSE 8080
+ENTRYPOINT [ "java", "-jar", "app.jar" ]
 
-# FROM ubuntu:latest
+FROM ubuntu:latest
 
-# RUN apt-get update
-# RUN apt-get install openjdk-17-jdk -y
+RUN apt-get update
+RUN apt-get install openjdk-17-jdk -y
 
-# COPY ..
+COPY ..
 
-# RUN apt-get install maven -y
-# RUN mvn clean install
+RUN apt-get install maven -y
+RUN mvn clean install
 
-# FROM openjdk:17-jdk-slim
+FROM openjdk:17-jdk-slim
 
-# EXPOSE 8080
+EXPOSE 8080
 
-# COPY --from=build / target/apibackend-0.0.1-SNAPSHOT.jar
+COPY --from=build / target/apibackend-0.0.1-SNAPSHOT.jar
