fix:atualizando actions do gitHub para rodar testes

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,7 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Configurações do MVC
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.mvc.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Configuração do Redis
 cache.type=redis
