--- a/src/test/java/com/api/apibackend/resources/application-test.properties
+++ b/src/test/java/com/api/apibackend/resources/application-test.properties
@@ -7,4 +7,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Console do H2 (opcional, para acesso ao console web)
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
