--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -81,6 +81,12 @@ management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.password=uhmczwarlshtektl
+spring.mail.username=novasoftwareorganization@gmail.com
+spring.mail.port=587
+
 # # Migration flyway
 # spring.flyway.enabled=false
 # spring.flyway.baseline-on-migrate=true
