--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -87,6 +87,6 @@ spring.mail.password=uhmczwarlshtektl
 spring.mail.username=novasoftwareorganization@gmail.com
 spring.mail.port=587
 
-# # Migration flyway
+# Migration flyway
 # spring.flyway.enabled=false
 # spring.flyway.baseline-on-migrate=true
