--- a/dockerFile
+++ b/dockerFile
@@ -1,21 +1,16 @@
-FROM eclipse-temurin:17-jdk-alpine
+FROM maven:3.6-adoptopenjdk-11 AS build
+
+WORKDIR /build
+
+COPY pom.xml .
+COPY src src
+
+RUN mvn package -DskipTests
+
+FROM adoptopenjdk:11-jre-hotspot
 WORKDIR /app
-COPY target/apibackend-0.0.1-SNAPSHOT.jar apibackend-0.0.1-SNAPSHOT.jar
-EXPOSE 8080
-ENTRYPOINT [ "java", "-jar", "app.jar" ]
 
-FROM ubuntu:latest
-
-RUN apt-get update
-RUN apt-get install openjdk-17-jdk -y
-
-COPY ..
-
-RUN apt-get install maven -y
-RUN mvn clean install
-
-FROM openjdk:17-jdk-slim
+COPY --from=build /build/target/*.jar apibackend-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8080
-
-COPY --from=build / target/apibackend-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java", "-jar", "apibackend-0.0.1-SNAPSHOT.jar"]
